# MineClone

./: CMakeLists.txt  README.md  help_cmake_compiler.txt
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/core/: Camera.h  Input.cpp  Input.h  Shader.cpp  Shader.h  Window.cpp  Window.h  glad.c
src/include/glad/: glad.h
